--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@
     background-size: cover;
     height: 50px;
     background-image: url("/img/amazon_logo.png") ;
-    width: 100%;
+    width: 100px;
 }
 .border{
     border: 1.5px solid transparent;
@@ -179,6 +179,69 @@ span{
     text-decoration: none;
 }
 /* footer */
-.foot-panel-1{
+footer{
+   margin-top: 15px; 
+}
+.foot-panel1{
     background-color: #37475a;
+    color: white;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.85rem;
+}
+.foot-panel1 a{
+    text-decoration: none;
+    color: white;
+}
+.foot-panel2{
+    background-color: #222f3d;
+    color: white;
+    height: 300px;
+    display: flex;
+    justify-content: space-evenly;
+}
+.foot-panel2 ul{
+    margin-top: 30px;
+}
+.foot-panel2 a{
+    text-decoration: none; 
+    color: #dddddd;
+    display: block;
+    font-size: 0.85rem;
+    margin-top: 10px;
+}
+.foot-panel3{
+    background-color: #222f3d;
+    color: white;
+    border-top: 0.1px solid white;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/* .logo{
+    background-size: cover;
+    height: 50px;
+    background-image: url("/img/amazon_logo.png") ;
+    width: 100px;
+} */
+
+.foot-panel4{
+    background-color: #0f1111;
+    color: white;
+    height: 70px;
+    font-size: 0.8rem;
+    text-align: center;
+}
+.pages{
+    padding-top: 20px;
+}
+.copyright{
+    padding-top: 5px;
+}
+.foot-panel4 a{
+    color: white;
+    text-decoration: none;
 }
